$Id$

You are looking at a CVS snapshot from the REL_1_2 CVS branch.

Version 1.1.5 (?? ??? 2007)
 - Bug fix: icalclient.php was not working with Thunderbird/Lightning
 - Added Indonesian translation

Version 1.1.4 (28 Aug 2007)
 - Fixed problem with RSS feed not validating
 - Fixed bug [ 1776496 ] view Week by Time Table is skewed
 - Disabled option to disable users at this time. It was not full implemented anyway.
   See Bug Report[ 1775544 ] Enable/Disable Users
 - Fixed bug [ 1746529 ] login.php is still cached after changing anything at admin.php
 - Added CDATA block around JS in view_r.php
 - Fixed bug [ 1716961 ] View other peoples Private Date Descriptions
 - Fixed bug [ 1768505 ] unclosed select-tag
 - Fixed bug [ 1657776 ] reminder time zone problem
 - Fixed bug [ 1725025 ] rss error when showdate=1
 - Fixed bug [ 1748124 ] reminder email has wrong date
 - Fixed bug [ 1766614 ] 'weekstart' at edit_entry is wrong
Version 1.1.3 (4 Aug 2007)
 - Fixed bug: when upgrading from 1.0.5 to 1.1.X, a bad cookie session can
   cause PHP to crash on some systems.
 - If settings.php is size 0, then redirect to install page (because install
   was started but not completed).
 - Fixed bug [ 1744648 ] Theme changing over system settings
 - Fixed bug: error in SQLite creation SQL
 - Fixed bug [ 1738333 ] Events without reminder
 - Fixed bug [ 1737128 ] From notification to "not authorized"
 - Fixed bug [ 1766291 ] mini-calender pop-up will not be displayed correctly
 - Fixed bug [ 1754622 ] every 'normal' entry will be displayed as 'Priority: 2-High'
 - Fixed bug [ 1765906 ] layered-entries don't show detailed pop-up infos via hover
 - Fixed bug [ 1765924 ] improvements requested at view_entry.php refering 'Notes'
 - Fixed bug [ 1765928 ] cannot add attachments to an entry
 - Fixed bug [ 1765881 ] long day names not proper adjusted in week.php for English
 - Fixed bug [ 1765970 ] enabled option "Display tasks in Calendars" will not work at